--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/resumeProfilePic.jpeg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/resumeProfilePic2.jpeg" alt="" /></a>
 					<h1><strong>Jeremy Raby</strong>, bringing a human touch to analytics.</h1>
 				</div>
 			</header>
