Add Cyclistic project

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 								<p>How many people have been vaccinated against COVID-19, and are there any social
 									disparities? Using Tableau, I found a clear difference in vaccination rates of
 									of lower socio-economic status vs high socio-economic status.</p>
+								</article>
+								<article class="col-6 col-12-xsmall work-item">
+									<a href="images/fulls/cyclisticDashboardThumnail.jpg" class="image fit thumb"><img src="images/thumbs/cyclisticDashboardThumnail.jpg" alt="Dashboard showing use cases for bike share riders" /></a>
+									<a href="https://github.com/jeremyraby/googleCapstone"><h3>Cyclistic Bike Share Rider Trends</h3></a>
+									<p>Get ready to pedal your way through some juicy insights! Casual riders take leisurely, longer rides while annual members are consistent in their usage. The summer months and 
+									   Thursdays are peak times for members, while Saturdays are hopping for casual riders. And guess what? Electric bikes reign supreme for both groups!</p>
 							<!--
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
