--- a/index.html
+++ b/index.html
@@ -70,11 +70,18 @@
 									disparities? Using Tableau, I found a clear difference in vaccination rates of
 									of lower socio-economic status vs high socio-economic status.</p>
 								</article>
-								<article class="col-6 col-12-xsmall work-item">
-									<a href="images/fulls/cyclisticDashboardThumnail.jpg" class="image fit thumb"><img src="images/thumbs/cyclisticDashboardThumnail.jpg" alt="Dashboard showing use cases for bike share riders" /></a>
-									<a href="https://github.com/jeremyraby/googleCapstone"><h3>Cyclistic Bike Share Rider Trends</h3></a>
-									<p>Get ready to pedal your way through some juicy insights! Casual riders take leisurely, longer rides while annual members are consistent in their usage. The summer months and 
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/premierLeagueTitleSlide.jpg" class="image fit thumb"><img src="images/thumbs/premierLeagueTitleSlide.jpg" alt="Title slide of 2018-2019 English Premier League Analysis" /></a>
+								<a href="https://github.com/jeremyraby/premierLeague18-19"><h3>English Premier League, 2018-2019</h3></a>
+								<p>I recently started watching Ted Lasso on AppleTV+ and got interested in <s>soccer</s> football. Basic, I know, but it is what it is. As I was reading up on "the beautiful game," trying to figure out just 
+									what the heck "offside" is, I also realized I could probably use this to practice data analytics and kill two birds with one stone.</p>
+								</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/cyclisticDashboardThumnail.jpg" class="image fit thumb"><img src="images/thumbs/cyclisticDashboardThumnail.jpg" alt="Dashboard showing use cases for bike share riders" /></a>
+								<a href="https://github.com/jeremyraby/googleCapstone"><h3>Cyclistic Bike Share Rider Trends</h3></a>
+								<p>Get ready to pedal your way through some juicy insights! Casual riders take leisurely, longer rides while annual members are consistent in their usage. The summer months and 
 									   Thursdays are peak times for members, while Saturdays are hopping for casual riders. And guess what? Electric bikes reign supreme for both groups!</p>
+								</article>
 							<!--
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
