--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 								<p>Get ready to pedal your way through some juicy insights! Casual riders take leisurely, longer rides while annual members are consistent in their usage. The summer months and 
 									   Thursdays are peak times for members, while Saturdays are hopping for casual riders. And guess what? Electric bikes reign supreme for both groups!</p>
 								</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/resume_screenshot.jpg" class="image fit thumb"><img src="images/thumbs/resume_screenshot.jpg" alt="My resume" /></a>
+								<a href="https://github.com/jeremyraby/resume/blob/main/Jeremy%20Raby%20Resume.pdf"><h3>Resume</h3></a>
+								<p>View my resume</p>
+								</article>
 							<!--
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
